tests/coverage/misc/fail/negative/028_for_await_script_top_level.js
// for-await at top level in script mode is a SyntaxError.
for await (const x of [1, 2]) {}
